[project]
name = ""
version = ""
description = ""
authors = [
    {name = "benyamin ginzburg", email = "benyamin+git@ginzburg.io"},
]

dependencies = [
    "aiogram==3.11.0",
    "aiogram-metrics==2.0.0",
    "betterlogging==0.2.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "sentry-sdk==1.45.1",
    "odmantic==1.0.2",
    "motor==3.5.1",
    "httpx==0.27.0",
    "setuptools",
]

requires-python = ">=3.12"
license = {text = "MIT"}

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
