[project]
name = ""
version = "2.5.0"
requires-python = ">=3.12"
license = {text = "MIT"}
description = ""
authors = [
    {name = "benyamin ginzburg", email = "benyamin+git@ginzburg.io"},
]

dependencies = [
    "aiogram==3.11.0",
    "aiogram-metrics==2.0.0",
    "betterlogging==0.2.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "sentry-sdk==1.45.1",
    "odmantic==1.0.2",
    "motor==3.6.0",
    "httpx==0.27.0",
    "setuptools",
]


